Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="col-2">
                     <h1>Chase Freedom, not<br>limit.</h1>
                     <p>Because when you run with passion, limits don't exist.</p>
-                    <a href="products.html" class="btn">Explore Now &#8594;</a>
+                    <a href="#shoes" class="btn">Explore Now &#8594;</a>
                 </div>
                 <div class="col-2">
                     <img src="images/image1.png">
@@ -234,7 +234,7 @@
                         <p>$15.00</p>-->
                     </div>
                     <div class="col-4">
-                        <a href="football.html"><img src="images/snk.jpg"></a>
+                        <a href="sneakers.html"><img src="images/snk.jpg"></a>
                         <h4>Sneakers </h4>
                         <!--<div class="rating">
                             <i class="fa fa-star" ></i>
@@ -246,7 +246,7 @@
                         <p>$48.00</p>-->
                     </div>
                     <div class="col-4">
-                        <a href="products-details.html"><img src="images/tennis.jpg"></a>
+                        <a href="tennis.html"><img src="images/tennis.jpg"></a>
                         <h4>Tennis Shoes </h4>
                         <!--<div class="rating">
                             <i class="fa fa-star" ></i>
@@ -258,8 +258,8 @@
                         <p>$48.00</p>-->
                     </div>
                     <div class="col-4">
-                        <a href="products-details.html"><img src="images/sneakers.png"></a>
-                        <h4>Sneakers </h4>
+                        <a href="casual.html"><img src="images/sneakers.png"></a>
+                        <h4>Casuals </h4>
                         <!--<div class="rating">
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star" ></i>
