--- a/basketball.html
+++ b/basketball.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <title>All Products - VAYU</title>
-        <link rel="stylesheet" href="Shoes.css">
+        <link rel="stylesheet" href="Shoe.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
         <!--added a cdn link by searching font awesome4 cdn and getting this link from https://www.bootstrapcdn.com/fontawesome/ this url*/-->
@@ -22,9 +22,9 @@
                <nav>
                     <ul id="MenuItems">
                         <li><a href="index.html">Home</a></li>
-                         <li><a href=".html">Catagories</a></li>
-                         <li><a href="">About</a></li>
-                         <li><a href="">Contact</a></li>
+                         <li><a href="shoes.html">Shoes</a></li>
+                         <li><a href="#f1.html">F1</a></li>
+                         <li><a href="#review">Reviews</a></li>
                          <li><a href="account.html">Account</a></li>
 
                     </ul>
@@ -63,7 +63,7 @@
             <div class="row">
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/bask1.png"></a>
-                        <a href="products-details.html"><h4>Downshifter Sports Shoes</h4></a>
+                        <a href="products-details.html"><h4>VAYU Retro 1</h4></a>
                         <div class="rating">
                             
                             <i class="fa fa-star" ></i>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/bask2.png"></a>
-                        <h4>Lace-Up Running Shoes</h4>
+                        <h4>VAYU Rush</h4>
                         <div class="rating">
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star" ></i>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/bask3.png"></a>
-                        <h4>Lace Fastening Shoes</h4>
+                        <h4>VAYU Bolt</h4>
                         <div class="rating">
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star" ></i>
@@ -116,7 +116,7 @@
                 <div class="row">
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/bask4.png"></a>
-                        <h4>Lace-Up Running Shoes</h4>
+                        <h4>VAYU Air</h4>
                         <div class="rating">
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star" ></i>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/bask5.png"></a>
-                        <h4>Flat Lace-Fastening Shoes</h4>
+                        <h4>VAYU Retro 2</h4>
                         <div class="rating">
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star" ></i>
@@ -140,7 +140,7 @@
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/bask.jpg"></a>
-                        <h4>Loafers Men (Gray)</h4>
+                        <h4>VAYU White Mist</h4>
                         <div class="rating">
                             <i class="fa fa-star-o" ></i>
                             <i class="fa fa-star" ></i>
@@ -228,5 +228,4 @@
             }
         </script>
     </body>
-
 </html>
