--- a/f1.html
+++ b/f1.html
@@ -22,9 +22,9 @@
                <nav>
                     <ul id="MenuItems">
                         <li><a href="index.html">Home</a></li>
-                         <li><a href=".html">Catagories</a></li>
-                         <li><a href="">About</a></li>
-                         <li><a href="">Contact</a></li>
+                         <li><a href="shoes.html">Shoes</a></li>
+                         <li><a href="f1.html">F1</a></li>
+                         <li><a href="#review">Reviews</a></li>
                          <li><a href="account.html">Account</a></li>
 
                     </ul>
@@ -72,7 +72,7 @@
                             <i class="fa fa-star-half-o" ></i>
                             <i class="fa fa-star-o" ></i>
                         </div>
-                        <p>$50.00</p>
+                        <p>Rs.2399</p>
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/2f1.PNG"></a>
@@ -84,7 +84,7 @@
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star-half-o" ></i>
                         </div>
-                        <p>$35.00</p>
+                        <p>Rs.2499</p>
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/3f1.JPG"></a>
@@ -96,7 +96,7 @@
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star-o" ></i>
                         </div>
-                        <p>$15.00</p>
+                        <p>Rs.2499</p>
                     </div>
                     <!--<div class="col-4">
                         <a href="products-details.html"><img src="images/product-10.jpg"></a>
@@ -124,7 +124,7 @@
                             <i class="fa fa-star-o" ></i>
                             <i class="fa fa-star-o" ></i>
                         </div>
-                        <p>$35.00</p>
+                        <p>Rs.2499</p>
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/5f1.png"></a>
@@ -136,7 +136,7 @@
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star-half-o" ></i>
                         </div>
-                        <p>$48.00</p>
+                        <p>Rs.2499</p>
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/6f1.JPG"></a>
@@ -148,7 +148,7 @@
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star-o" ></i>
                         </div>
-                        <p>$15.00</p>
+                        <p>Rs.2499</p>
                     </div>
                     <!--<div class="col-4">
                         <a href="products-details.html"><img src="images/product-12.jpg"></a>
@@ -177,7 +177,7 @@
                             <i class="fa fa-star-o" ></i>
                             <i class="fa fa-star-o" ></i>
                         </div>
-                        <p>$35.00</p>
+                        <p>Rs.1499</p>
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/8f1.JPG"></a>
@@ -189,7 +189,7 @@
                             <i class="fa fa-star" ></i>
                             <i class="fa fa-star-half-o" ></i>
                         </div>
-                        <p>$21.00</p>
+                        <p>Rs.999</p>
                     </div>
                     <div class="col-4">
                         <a href="products-details.html"><img src="images/9f1.JPG"></a>
@@ -201,7 +201,7 @@
                             <i class="fa fa-star-o" ></i>
                             <i class="fa fa-star-o" ></i>
                         </div>
-                        <p>$21.00</p>
+                        <p>Rs.1699</p>
                     </div>
                     <!--<div class="col-4">
                         <a href="products-details.html"><img src="images/product-2.jpg"></a>
