--- a/running.html
+++ b/running.html
@@ -22,9 +22,9 @@
                <nav>
                     <ul id="MenuItems">
                         <li><a href="index.html">Home</a></li>
-                         <li><a href=".html">Catagories</a></li>
-                         <li><a href="">About</a></li>
-                         <li><a href="">Contact</a></li>
+                         <li><a href="shoes.html">Shoes</a></li>
+                         <li><a href="f1.html">F1</a></li>
+                         <li><a href="#review">Reviews</a></li>
                          <li><a href="account.html">Account</a></li>
 
                     </ul>
